--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <title>Index</title>
 </head>
 <body>
-Hello, {{ name }}
+<form action="/greet" method="get">
+    <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+    <input type="submit">
+</form>
 </body>
 </html>
