Add core layout.html template

--- a/templates/greet.html
+++ b/templates/greet.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" name="viewport" content="initial-scale=1, width=device-width">
-    <title>Greeting</title>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block body %}
+
 Hello, {{ name }}
-</body>
-</html>
+
+{% endblock %}
