--- a/froshims/templates/index.html
+++ b/froshims/templates/index.html
@@ -2,6 +2,16 @@
 
 {% block body %}
 
-TODO
+<h1>Register</h1>
+<form action="/register" method="post">
+    <input autocomplete="off" autofocus name="name" placeholder="Name">
+    <select>
+        <option disabled selected>Sport</option>
+        <option>Basketball</option>
+        <option>Soccer</option>
+        <option>Ultimate Frisbee</option>
+    </select>
+    <input type="submit" value="Register">
+</form>
 
 {% endblock %}
