Fix issues with sport select and POST method

--- a/froshims/templates/index.html
+++ b/froshims/templates/index.html
@@ -5,7 +5,7 @@
 <h1>Register</h1>
 <form action="/register" method="post">
     <input autocomplete="off" autofocus name="name" placeholder="Name">
-    <select>
+    <select name="sport">
         <option disabled selected>Sport</option>
         <option>Basketball</option>
         <option>Soccer</option>
