--- a/froshims/templates/index.html
+++ b/froshims/templates/index.html
@@ -7,9 +7,9 @@
     <input autocomplete="off" autofocus name="name" placeholder="Name">
     <select name="sport">
         <option disabled selected>Sport</option>
-        <option>Basketball</option>
-        <option>Soccer</option>
-        <option>Ultimate Frisbee</option>
+        {% for sport in sports %}
+            <option>{{ sport }}</option>
+        {% endfor %}
     </select>
     <input type="submit" value="Register">
 </form>
