--- a/froshims/templates/index.html
+++ b/froshims/templates/index.html
@@ -8,7 +8,7 @@
     <select name="sport">
         <option disabled selected>Sport</option>
         {% for sport in sports %}
-            <option>{{ sport }}</option>
+            <input name="sport" type="radio" value="{{ sport }}">{{ sport }}
         {% endfor %}
     </select>
     <input type="submit" value="Register">
